--- a/catalog.html
+++ b/catalog.html
@@ -35,7 +35,28 @@
 						<ul>
 							<li>
 								<a href="catalog.html">каталог товаров</a>
+								<ul>
+									<li>
+										<a href="#">Виртуальная реальность</a>
+									</li>
+									<li>			
+										<a href="#">Моноподы для селфи</a>
+									</li>
+									<li>
+										<a href="#">Экшн-камеры</a>
+									</li>
+									<li>
+										<a href="#">Фитнес-браслеты</a>
+									</li>
+									<li>
+										<a href="#">Умные часы</a>
+									</li>
+									<li>
+										<a href="#">Квадрокоптер</a>
+									</li>
+								</ul>
 							</li>
+								
 							<li>
 								<a href="#">доставка</a>
 							</li>
