--- a/catalog.html
+++ b/catalog.html
@@ -1,277 +1,294 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-	 <meta charset="utf-8">
-	 <title>HTML Academy: Девайс</title>
-  </head>
-  <body>
-		<header>
-			<nav>
-				<a>
-					<img src="#" alt="Логотип сайта «DEVICE»">
-				</a>
 
-				<ul>
-					<li>
-						<a href="#">Валентин Петухов</a>
-					</li>
-					<li>
-						<a href="#">Выйти</a>
-					</li>
-					<li>
-						<a href="#">Сравнить</a>
-					</li>
-					<li>
-						<a href="#">Корзина</a>
-					</li>					
-				</ul>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Девайс</title>
+</head>
 
-				<form action="#" method="POST">
-					<input type="search" placeholder="Поиск по сайту">
-				 </form>
+<body>
+  <header>
+    <nav>
+      <a>
+        <img src="#" alt="Логотип сайта «DEVICE»">
+      </a>
 
-				<section>
-					<h2>Меню сайта</h2>
-						<ul>
-							<li>
-								<a href="catalog.html">каталог товаров</a>
-								<ul>
-									<li>
-										<a href="#">Виртуальная реальность</a>
-									</li>
-									<li>			
-										<a href="#">Моноподы для селфи</a>
-									</li>
-									<li>
-										<a href="#">Экшн-камеры</a>
-									</li>
-									<li>
-										<a href="#">Фитнес-браслеты</a>
-									</li>
-									<li>
-										<a href="#">Умные часы</a>
-									</li>
-									<li>
-										<a href="#">Квадрокоптер</a>
-									</li>
-								</ul>
-							</li>
-								
-							<li>
-								<a href="#">доставка</a>
-							</li>
-							<li>
-								<a href="#">гарантия</a>
-							</li>
-							<li>
-								<a href="#">контакты</a>
-							</li>
-						</ul>
-				</section>
-			</nav>
-		</header>
+      <ul>
+        <li>
+          <a href="#">Валентин Петухов</a>
+        </li>
+        <li>
+          <a href="#">Выйти</a>
+        </li>
+        <li>
+          <a href="#">Сравнить</a>
+        </li>
+        <li>
+          <a href="#">Корзина</a>
+        </li>
+      </ul>
 
-		<main>
-			<section>
-				<h2>Моноподы для селфи</h2>
-				<ul>
-					<li>
-						<a href="index.html">Главная</a>
-					</li>
-					<li>
-						<a href="catalog.html">Каталог товаров</a>
-					</li>
-					<li>
-						<a href="#">Моноподы для селфи</a>
-					</li>
-				</ul>
-			</section>
+      <form action="#" method="POST">
+        <input type="search" placeholder="Поиск по сайту">
+      </form>
 
-			<section>
-				<h2>фильтр:</h2>
-					<form method="get" action="https://echo.htmlacademy.ru">
-						<fieldset>
-							<legend>Стоимость</legend>
-								<label>от<input type="text" value="0"></label>
-								<label>до<input type="text" value="5000"></label>
-							</fieldset>
+      <section>
+        <h2>Меню сайта</h2>
+        <ul>
+          <li>
+            <a href="catalog.html">каталог товаров</a>
+            <ul>
+              <li>
+                <a href="#">Виртуальная реальность</a>
+              </li>
+              <li>
+                <a href="#">Моноподы для селфи</a>
+              </li>
+              <li>
+                <a href="#">Экшн-камеры</a>
+              </li>
+              <li>
+                <a href="#">Фитнес-браслеты</a>
+              </li>
+              <li>
+                <a href="#">Умные часы</a>
+              </li>
+              <li>
+                <a href="#">Квадрокоптер</a>
+              </li>
+            </ul>
+          </li>
 
-						<fieldset>
-							<legend>Цвет</legend>
-							<ul>
-									<li>
-										<input checked type="checkbox" name="black" id="filter-black">
-										<label for="filter-black">Черный</label>
-									</li>
-									<li>
-										<input type="checkbox" name="white" id="filter-white">
-										<label for="filter-black">Белый</label>
-									</li>							
-									<li>
-										<input checked type="checkbox" name="dark-blue" id="filter-dark-blue">
-										<label for="filter-dark-blue">Синий</label>
-									</li>							
-									<li>
-										<input checked type="checkbox" name="red" id="filter-red">
-										<label for="filter-red">Красный</label>
-									</li>							
-									<li>
-										<input type="checkbox" name="pink" id="filter-pink">
-										<label for="filter-pink">Розовый</label>
-									</li>
-									</ul>
-						</fieldset>
+          <li>
+            <a href="#">доставка</a>
+          </li>
+          <li>
+            <a href="#">гарантия</a>
+          </li>
+          <li>
+            <a href="#">контакты</a>
+          </li>
+        </ul>
+      </section>
+    </nav>
+  </header>
 
-						<fieldset>
-								<legend>Bluetooth</legend>
-									<ul>
-								<li>
-									<input checked type="radio" name="bluetooth-yes" id="filter-bluetooth-yes">
-									<label for="filter-bluetooth-yes">Есть</label>
-								</li>
-								<li>
-									<input type="radio" name="bluetooth-no" id="filter-bluetooth-no">
-									<label for="filter-bluetooth-no">Нет</label>
-								</li>
-							</ul>
-						</fieldset>
-						<button type="submit">Показать</button>
-					</form>
-			</section>		
+  <main>
+    <section>
+      <h2>Моноподы для селфи</h2>
+      <ul>
+        <li>
+          <a href="index.html">Главная</a>
+        </li>
+        <li>
+          <a href="catalog.html">Каталог товаров</a>
+        </li>
+        <li>
+          <a href="#">Моноподы для селфи</a>
+        </li>
+      </ul>
+    </section>
 
-				<section>
-					<h2>сортировка:</h2>
-						<button type="button">По цене</button>
-						<button type="button">По типу</button>
-						<button type="button">По популярности</button>
-				</section>
+    <section>
+      <h2>фильтр:</h2>
+      <form method="get" action="https://echo.htmlacademy.ru">
+        <fieldset>
+          <legend>Стоимость</legend>
+          <label>от<input type="text" value="0"></label>
+          <label>до<input type="text" value="5000"></label>
+        </fieldset>
 
-				<section>
-					<h2>Список моноподов для селфи</h2>
-						<a href="#">
-							<h3>Любительская селфи-палка</h3>
-							<p>
-								<img src="#" alt="Любительская селфи-палка">
-							</p>
-						</a>
-							<p>
-								1 100 руб.
-								<button type="button">в корзину</button>
-								<button type="button">Добавить к сравнению</button>
-							</p>
+        <fieldset>
+          <legend>Цвет</legend>
+          <ul>
+            <li>
+              <input checked type="checkbox" name="black" id="filter-black">
+              <label for="filter-black">Черный</label>
+            </li>
+            <li>
+              <input type="checkbox" name="white" id="filter-white">
+              <label for="filter-black">Белый</label>
+            </li>
+            <li>
+              <input checked type="checkbox" name="dark-blue" id="filter-dark-blue">
+              <label for="filter-dark-blue">Синий</label>
+            </li>
+            <li>
+              <input checked type="checkbox" name="red" id="filter-red">
+              <label for="filter-red">Красный</label>
+            </li>
+            <li>
+              <input type="checkbox" name="pink" id="filter-pink">
+              <label for="filter-pink">Розовый</label>
+            </li>
+          </ul>
+        </fieldset>
 
-							<h3>Профессиональная селфи-палка</h3>
-							<p>
-								<img src="#" alt="Профессиональная селфи-палка">
-							</p>
-							<p>
-								1 500 руб.
-								<button type="button">в корзину</button>
-								<button type="button">Добавить к сравнению</button>
-							</p>
+        <fieldset>
+          <legend>Bluetooth</legend>
+          <ul>
+            <li>
+              <input checked type="radio" name="bluetooth" id="filter-bluetooth-yes">
+              <label for="filter-bluetooth-yes">Есть</label>
+            </li>
+            <li>
+              <input type="radio" name="bluetooth" id="filter-bluetooth-no">
+              <label for="filter-bluetooth-no">Нет</label>
+            </li>
+          </ul>
+        </fieldset>
+        <button type="submit">Показать</button>
+      </form>
+    </section>
 
-							<h3>Непотопляемая селфи-палка</h3>
-							<p>
-								<img src="#" alt="Непотопляемая селфи-палка">
-							</p>
-							<p>
-								1 500 руб.
-								<button type="button">в корзину</button>
-								<button type="button">Добавить к сравнению</button>
-							</p>
+    <section>
+      <h2>сортировка:</h2>
+      <button type="button">По цене</button>
+      <button type="button">По типу</button>
+      <button type="button">По популярности</button>
+    </section>
 
-							<h3>Селфи-палка «Следуй за мной»</h3>
-							<p>
-								<img src="#" alt="Селфи-палка «Следуй за мной»">
-							</p>
-							<p>
-								1 900 руб.
-								<button type="button">в корзину</button>
-								<button type="button">Добавить к сравнению</button>
-							</p>
-				</section>
+    <section>
+      <h2>
+        <a href="#">Список моноподов для селфи</a>
+      </h2>
 
-				<button type="button">Назад</button>
-				<ul>
-					<li>
-					  <a>1</a>
-					</li>
-					<li>
-						<a href="#">2</a>
-					</li>
-					<li>
-					  <a href="#">3</a>
-					</li>
-				 </ul>
-				<button type="button">Вперед</button>
-		</main>
+      <h3>
+        <a href="#">Любительская селфи-палка</a>
+      </h3>
+      <p>
+        <img src="#" alt="Любительская селфи-палка">
+      </p>
+      <p>
+        1 100 руб.
+        <button type="button">в корзину</button>
+        <button type="button">Добавить к сравнению</button>
+      </p>
 
-		<footer>
-			<a>
-				<img src="#" alt="Логотип «DEVICE»">
-			</a>
+      <h3>
+        <a href="#">Профессиональная селфи-палка</a>
+      </h3>
+      <p>
+        <img src="#" alt="Профессиональная селфи-палка">
+      </p>
+      <p>
+        1 500 руб.
+        <button type="button">в корзину</button>
+        <button type="button">Добавить к сравнению</button>
+      </p>
 
-			<ul>
-				<li>
-					<a href="#">Валентин Петухов</a>
-				</li>
-				<li>
-					<a href="#">Выйти</a>
-				</li>
-				<li>
-					<a href="#">Сравнить</a>
-				</li>
-				<li>
-					<a href="#">Корзина</a>
-				</li>					
-			</ul>
+      <h3>
+        <a href="#">Непотопляемая селфи-палка</a>
+      </h3>
+      <p>
+        <img src="#" alt="Непотопляемая селфи-палка">
+      </p>
+      <p>
+        1 500 руб.
+        <button type="button">в корзину</button>
+        <button type="button">Добавить к сравнению</button>
+      </p>
 
-			<p>
-				г. Москва, ул. Строителей, 15
-			</p>
+      <h3>
+        <a href="#">Селфи-палка «Следуй за мной»</a>
+      </h3>
+      <p>
+        <img src="#" alt="Селфи-палка «Следуй за мной»">
+      </p>
+      <p>
+        1 900 руб.
+        <button type="button">в корзину</button>
+        <button type="button">Добавить к сравнению</button>
+      </p>
+    </section>
 
-		<section>
-			<h2>Меню сайта</h2>
-			<ul>
-				<li>
-					<a href="#">доставка</a>
-				</li>
-				<li>
-					<a href="#">гарантия</a>
-				</li>
-				<li>
-					<a href="#">контакты</a>
-				</li>
-			</ul>
-		</section>
+    <ul class="pagination">
+      <li>
+        <a href="">Назад</a>
+      </li>
+      <li>
+        <a href="#">1</a>
+      </li>
+      <li>
+        <a href="#">2</a>
+      </li>
+      <li>
+        <a href="#">3</a>
+      </li>
+      <li>
+        <a href="">Вперед</a>
+      </li>
+    </ul>
 
-		<p>
-			<a href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
-		</p>
+  </main>
 
-		<section>
-			<h2>Мы в социальных сетях</h2>
-			<ul>
-				<li>
-					<a href="#">Facebook</a>
-					<img src="#" alt="Логотип Facebook">
-				</li>
-				<li>
-					<a href="#">Instagram</a>
-					<img src="#" alt="Логотип Instagram">
-				</li>
-				<li>
-					<a href="#">Twitter</a>
-					<img src="#" alt="Логотип Twitter">
-				</li>
-			</ul>
-		</section>
+  <footer>
+    <a>
+      <img src="#" alt="Логотип «DEVICE»">
+    </a>
 
-		<a href="https://htmlacademy.ru/intensive/htmlcss">
-			<img src="#" alt="Логотип «HTML Academy»">
-		</a>
+    <ul>
+      <li>
+        <a href="#">Валентин Петухов</a>
+      </li>
+      <li>
+        <a href="#">Выйти</a>
+      </li>
+      <li>
+        <a href="#">Сравнить</a>
+      </li>
+      <li>
+        <a href="#">Корзина</a>
+      </li>
+    </ul>
 
-	</footer>
+    <p>
+      г. Москва, ул. Строителей, 15
+    </p>
+
+    <section>
+      <h2>Меню сайта</h2>
+      <ul>
+        <li>
+          <a href="#">доставка</a>
+        </li>
+        <li>
+          <a href="#">гарантия</a>
+        </li>
+        <li>
+          <a href="#">контакты</a>
+        </li>
+      </ul>
+    </section>
+
+    <p>
+      <a href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
+    </p>
+
+    <section>
+      <h2>Мы в социальных сетях</h2>
+      <ul>
+        <li>
+          <a href="#">Facebook</a>
+          <img src="#" alt="Логотип Facebook">
+        </li>
+        <li>
+          <a href="#">Instagram</a>
+          <img src="#" alt="Логотип Instagram">
+        </li>
+        <li>
+          <a href="#">Twitter</a>
+          <img src="#" alt="Логотип Twitter">
+        </li>
+      </ul>
+    </section>
+
+    <a href="https://htmlacademy.ru/intensive/htmlcss">
+      <img src="#" alt="Логотип «HTML Academy»">
+    </a>
+
+  </footer>
 
 </body>
+
 </html>
