Экспортированы и подключены изображения

--- a/catalog.html
+++ b/catalog.html
@@ -4,13 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/icons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/icons/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
   <header>
     <nav>
       <a>
-        <img src="#" alt="Логотип сайта «DEVICE»">
+        <img src="img/logo/logo.png" width="163.3" height="34.96" alt="Логотип «DEVICE»">
       </a>
 
       <ul>
@@ -157,7 +161,7 @@
         <a href="#">Любительская селфи-палка</a>
       </h3>
       <p>
-        <img src="#" alt="Любительская селфи-палка">
+        <img src="img/item/item-1.png" alt="Любительская селфи-палка">
       </p>
       <p>
         1 100 руб.
@@ -169,7 +173,7 @@
         <a href="#">Профессиональная селфи-палка</a>
       </h3>
       <p>
-        <img src="#" alt="Профессиональная селфи-палка">
+        <img src="img/item/item-2.png" alt="Профессиональная селфи-палка">
       </p>
       <p>
         1 500 руб.
@@ -181,7 +185,7 @@
         <a href="#">Непотопляемая селфи-палка</a>
       </h3>
       <p>
-        <img src="#" alt="Непотопляемая селфи-палка">
+        <img src="img/item/item-3.png" alt="Непотопляемая селфи-палка">
       </p>
       <p>
         1 500 руб.
@@ -193,7 +197,7 @@
         <a href="#">Селфи-палка «Следуй за мной»</a>
       </h3>
       <p>
-        <img src="#" alt="Селфи-палка «Следуй за мной»">
+        <img src="img/item/item-4.png" alt="Селфи-палка «Следуй за мной»">
       </p>
       <p>
         1 900 руб.
@@ -224,7 +228,7 @@
 
   <footer>
     <a>
-      <img src="#" alt="Логотип «DEVICE»">
+      <img src="img/logo/logo.png" width="163.3" height="34.96" alt="Логотип «DEVICE»">
     </a>
 
     <ul>
@@ -270,21 +274,21 @@
       <ul>
         <li>
           <a href="#">Facebook</a>
-          <img src="#" alt="Логотип Facebook">
+          <img src="img/Vector1fb.svg" alt="Логотип Facebook">
         </li>
         <li>
           <a href="#">Instagram</a>
-          <img src="#" alt="Логотип Instagram">
+          <img src="img/Vector2insta.svg" alt="Логотип Instagram">
         </li>
         <li>
           <a href="#">Twitter</a>
-          <img src="#" alt="Логотип Twitter">
+          <img src="img/Vector3tw.svg" alt="Логотип Twitter">
         </li>
       </ul>
     </section>
 
     <a href="https://htmlacademy.ru/intensive/htmlcss">
-      <img src="#" alt="Логотип «HTML Academy»">
+      <img src="img/logo/logo-academ.svg" width="26.94" height="34" alt="Логотип «HTML Academy»">
     </a>
 
   </footer>
