--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <nav>
       <a>
-        <img src="img/logo/logo.png" width="163.3" height="34.96" alt="Логотип сайта «DEVICE»">
+        <img src="img/logo/logo.svg" width="163" height="35" alt="Логотип «DEVICE»">
       </a>
 
       <ul>
@@ -79,7 +79,7 @@
     <div class="slider">
       <ol>
         <li class="slide-1">
-          <img src="img/slider-1.png" width="384" height="486" alt="Селфи-палка Бена Стиллера">
+          <img src="img/slide-1-selfie-stick.png" width="384" height="486" alt="Селфи-палка Бена Стиллера">
           <p>Делай селфи, как Бен Стиллер!</p>
           <p>Самая длинная палка для селфи доступна в нашем магазине. <br>
             Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
@@ -99,7 +99,7 @@
         </li>
 
         <li class="slide-2">
-          <img src="img/slider-2.png" width="345" height="485" alt="Фитнес-браслет «Я вижу, что ты снова ешь»">
+          <img src="img/slide-2-band.png" width="345" height="485" alt="Фитнес-браслет «Я вижу, что ты снова ешь»">
           <p>Худеем правильно!</p>
           <p>Мотивирующие фитнес-браслеты помогут найти в себе силы <br>
             не пропускать занятия и соблюдать диету.</p>
@@ -115,7 +115,7 @@
         </li>
 
         <li class="slide-3">
-          <img src="img/slider-3.png" width="526" height="334" alt="Дрон с камерой и лазером»">
+          <img src="img/slide-3-drone.png" width="526" height="334" alt="Дрон с камерой и лазером»">
           <p>Порхает как бабочка, жалит как пчела!</p>
           <p>Этот обычный, на первый взгляд, квадрокоптер оснащен <br>
             мощным лазером, замаскированным под стандартную камеру.</p>
@@ -198,22 +198,22 @@
       <ul>
         <li>
           <a href="#">
-            <img src="img/logo/logo-1dji.png" alt="Логотип DJI">
+            <img src="img/logo/logo-1dji.png" width="260" height="100" alt="Логотип DJI">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="img/logo/logo-2gadgets.png" alt="Логотип SP Gadgets">
+            <img src="img/logo/logo-2gadgets.png" width="260" height="100" alt="Логотип SP Gadgets">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="img/logo/logo-3gopro.png" alt="Логотип GoPro">
+            <img src="img/logo/logo-3gopro.png" width="260" height="100" alt="Логотип GoPro">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="img/logo/logo-4vive.png" alt="Логотип Vive">
+            <img src="img/logo/logo-4vive.png" width="260" height="100" alt="Логотип Vive">
           </a>
         </li>
       </ul>
@@ -237,7 +237,7 @@
       <h2>Контакты</h2>
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете <br>
         проверить работоспособность покупки. Всякое бывает.</p>
-      <img src="img/map 1.png" width="560" height="222" alt="Карта, г. Москва, ул. Строителей, 15">
+      <img src="img/map1.png" width="560" height="222" alt="Карта, г. Москва, ул. Строителей, 15">
       <button type="button">Напишите нам</button>
     </section>
 
@@ -245,7 +245,7 @@
 
   <footer>
     <a>
-      <img src="img/logo/logo.png" width="163.3" height="34.96" alt="Логотип «DEVICE»">
+      <img src="img/logo/logo.svg" width="163" height="35" alt="Логотип «DEVICE»">
     </a>
 
     <ul>
@@ -288,21 +288,21 @@
       <ul>
         <li>
           <a href="#">Facebook</a>
-          <img src="img/Vector1fb.svg" alt="Логотип Facebook">
+          <img src="img/socials-facebook.svg" width="32" height="32" alt="Логотип Facebook">
         </li>
         <li>
           <a href="#">Instagram</a>
-          <img src="img/Vector2insta.svg" alt="Логотип Instagram">
+          <img src="img/socials-instagram.svg" width="32" height="32" alt="Логотип Instagram">
         </li>
         <li>
           <a href="#">Twitter</a>
-          <img src="img/Vector3tw.svg" alt="Логотип Twitter">
+          <img src="img/socials-twitter.svg" width="32" height="32" alt="Логотип Twitter">
         </li>
       </ul>
     </section>
 
     <a href="https://htmlacademy.ru/intensive/htmlcss">
-      <img src="img/logo/logo-academ.svg" width="26.94" height="34" alt="Логотип «HTML Academy»">
+      <img src="img/logo/logo-academ.svg" width="27" height="34" alt="Логотип «HTML Academy»">
     </a>
 
   </footer>
