--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
   <header>
     <nav>
       <a>
-        <img src="img/logo/logo.png" width="163.3" height="34.96" alt="Логотип «DEVICE»">
+        <img src="img/logo/logo.svg" width="163" height="35" alt="Логотип «DEVICE»">
       </a>
 
       <ul>
@@ -161,7 +161,7 @@
         <a href="#">Любительская селфи-палка</a>
       </h3>
       <p>
-        <img src="img/item/item-1.png" alt="Любительская селфи-палка">
+        <img src="img/item/item-1.png" width="360" height="380" alt="Любительская селфи-палка">
       </p>
       <p>
         1 100 руб.
@@ -173,7 +173,7 @@
         <a href="#">Профессиональная селфи-палка</a>
       </h3>
       <p>
-        <img src="img/item/item-2.png" alt="Профессиональная селфи-палка">
+        <img src="img/item/item-2.png" width="360" height="380" alt="Профессиональная селфи-палка">
       </p>
       <p>
         1 500 руб.
@@ -185,7 +185,7 @@
         <a href="#">Непотопляемая селфи-палка</a>
       </h3>
       <p>
-        <img src="img/item/item-3.png" alt="Непотопляемая селфи-палка">
+        <img src="img/item/item-3.png" width="360" height="380" alt="Непотопляемая селфи-палка">
       </p>
       <p>
         1 500 руб.
@@ -197,7 +197,7 @@
         <a href="#">Селфи-палка «Следуй за мной»</a>
       </h3>
       <p>
-        <img src="img/item/item-4.png" alt="Селфи-палка «Следуй за мной»">
+        <img src="img/item/item-4.png" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
       </p>
       <p>
         1 900 руб.
@@ -228,7 +228,7 @@
 
   <footer>
     <a>
-      <img src="img/logo/logo.png" width="163.3" height="34.96" alt="Логотип «DEVICE»">
+      <img src="img/logo/logo.svg" width="163" height="35" alt="Логотип «DEVICE»">
     </a>
 
     <ul>
@@ -274,21 +274,21 @@
       <ul>
         <li>
           <a href="#">Facebook</a>
-          <img src="img/Vector1fb.svg" alt="Логотип Facebook">
+          <img src="img/socials-facebook.svg" width="32" height="32" alt="Логотип Facebook">
         </li>
         <li>
           <a href="#">Instagram</a>
-          <img src="img/Vector2insta.svg" alt="Логотип Instagram">
+          <img src="img/socials-instagram.svg" width="32" height="32" alt="Логотип Instagram">
         </li>
         <li>
           <a href="#">Twitter</a>
-          <img src="img/Vector3tw.svg" alt="Логотип Twitter">
+          <img src="img/socials-twitter.svg" width="32" height="32" alt="Логотип Twitter">
         </li>
       </ul>
     </section>
 
     <a href="https://htmlacademy.ru/intensive/htmlcss">
-      <img src="img/logo/logo-academ.svg" width="26.94" height="34" alt="Логотип «HTML Academy»">
+      <img src="img/logo/logo-academ.svg" width="27" height="34" alt="Логотип «HTML Academy»">
     </a>
 
   </footer>
