--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -8,89 +8,96 @@
   <link rel="icon" href="img/icons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/icons/180.png">
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
-  <header>
-    <nav>
-      <a>
+<body class="page-body">
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-header-logo">
         <img src="img/logo/logo.svg" width="163" height="35" alt="Логотип «DEVICE»">
       </a>
 
-      <ul>
-        <li>
-          <a href="#">Войти</a>
-        </li>
-        <li>
-          <a href="#">Сравнить</a>
-        </li>
-        <li>
-          <a href="#">Корзина</a>
-        </li>
-      </ul>
+      <div class="main-navigation-wrapper">
+        <div class="container">
+          <ul class="header-site-navigation">
+            <li>
+              <a class="login-link" href="#">Войти</a>
+            </li>
+            <li>
+              <a class="compare-link" href="#">Сравнить</a>
+            </li>
+            <li>
+              <a class="cart-link" href="#">Корзина</a>
+            </li>
+          </ul>
 
-      <form>
-        <input type="search" placeholder="Поиск по сайту">
-        <button type="submit"></button>
-      </form>
+          <form class="search">
+            <input type="search" placeholder="Поиск по сайту">
+            <button type="submit"></button>
+          </form>
 
-      <section>
-        <h2>Меню сайта</h2>
-        <ul>
-          <li>
-            <a href="catalog.html">каталог товаров</a>
+          <section class="main-menu">
+            <h2>Меню сайта</h2>
             <ul>
-              <li>
-                <a href="#">Виртуальная реальность</a>
+              <li class="main-menu catalog">
+                <a href="catalog.html">каталог товаров</a>
+                <ul class="catalog-list">
+                  <li>
+                    <a class="catalog-item" href="#">Виртуальная реальность</a>
+                  </li>
+                  <li>
+                    <a class="catalog-item" href="#">Моноподы для селфи</a>
+                  </li>
+                  <li>
+                    <a class="catalog-item" href="#">Экшн-камеры</a>
+                  </li>
+                  <li>
+                    <a class="catalog-item" href="#">Фитнес-браслеты</a>
+                  </li>
+                  <li>
+                    <a class="catalog-item" href="#">Умные часы</a>
+                  </li>
+                  <li>
+                    <a class="catalog-item" href="#">Квадрокоптер</a>
+                  </li>
+                </ul>
               </li>
-              <li>
-                <a href="#">Моноподы для селфи</a>
+
+              <li class="main-menu delivery">
+                <a href="#">доставка</a>
               </li>
-              <li>
-                <a href="#">Экшн-камеры</a>
+              <li class="main-menu warranty">
+                <a href="#">гарантия</a>
               </li>
-              <li>
-                <a href="#">Фитнес-браслеты</a>
-              </li>
-              <li>
-                <a href="#">Умные часы</a>
-              </li>
-              <li>
-                <a href="#">Квадрокоптер</a>
+              <li class="main-menu contacts">
+                <a href="#">контакты</a>
               </li>
             </ul>
-          </li>
-
-          <li>
-            <a href="#">доставка</a>
-          </li>
-          <li>
-            <a href="#">гарантия</a>
-          </li>
-          <li>
-            <a href="#">контакты</a>
-          </li>
-        </ul>
-      </section>
+          </section>
+        </div>
+      </div>
     </nav>
   </header>
 
-  <main>
+  <main class="container">
     <div class="slider">
       <ol>
         <li class="slide-1">
           <img src="img/slide-1-selfie-stick.png" width="384" height="486" alt="Селфи-палка Бена Стиллера">
-          <p>Делай селфи, как Бен Стиллер!</p>
-          <p>Самая длинная палка для селфи доступна в нашем магазине. <br>
+          <p class="topic">Делай селфи, как Бен Стиллер!</p>
+          <p class="topic-text">Самая длинная палка для селфи доступна в нашем магазине. <br>
             Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
-          <button type="button">подробнее</button>
-          <table>
-            <tr>
+          <button class="button slider-button" type="button">подробнее</button>
+          <table class="feature">
+            <tr class="characteristics">
               <td>8,5 м</td>
               <td>5 кг</td>
               <td>Карбон</td>
             </tr>
-            <tr>
+            <tr class="description">
               <th>Длина палки</th>
               <th>Вес палки</th>
               <th>Материал</th>
@@ -100,15 +107,15 @@
 
         <li class="slide-2">
           <img src="img/slide-2-band.png" width="345" height="485" alt="Фитнес-браслет «Я вижу, что ты снова ешь»">
-          <p>Худеем правильно!</p>
-          <p>Мотивирующие фитнес-браслеты помогут найти в себе силы <br>
+          <p class="topic">Худеем правильно!</p>
+          <p class="topic-text">Мотивирующие фитнес-браслеты помогут найти в себе силы <br>
             не пропускать занятия и соблюдать диету.</p>
-          <button type="button">подробнее</button>
-          <table>
-            <tr>
+          <button class="button slider-button" type="button">подробнее</button>
+          <table class="feature">
+            <tr class="characteristics">
               <td>48 часов</td>
             </tr>
-            <tr>
+            <tr class="description">
               <th>Без подзарядки</th>
             </tr>
           </table>
@@ -116,16 +123,16 @@
 
         <li class="slide-3">
           <img src="img/slide-3-drone.png" width="526" height="334" alt="Дрон с камерой и лазером»">
-          <p>Порхает как бабочка, жалит как пчела!</p>
-          <p>Этот обычный, на первый взгляд, квадрокоптер оснащен <br>
+          <p class="topic">Порхает как бабочка, жалит как пчела!</p>
+          <p class="topic-text">Этот обычный, на первый взгляд, квадрокоптер оснащен <br>
             мощным лазером, замаскированным под стандартную камеру.</p>
-          <button type="button">подробнее</button>
-          <table>
-            <tr>
+          <button class="button slider-button" type="button">подробнее</button>
+          <table class="feature">
+            <tr class="characteristics">
               <td>800 м</td>
               <td>50 м</td>
             </tr>
-            <tr>
+            <tr class="description">
               <th>Дальность полета</th>
               <th>Радиус поражения</th>
             </tr>
@@ -136,55 +143,55 @@
     </div>
 
 
-    <section>
+    <section class="category">
       <h2>Категории товаров</h2>
-      <ul>
+      <ul class="category-list">
         <li>
-          <a href="#">Виртуальная реальность</a>
+          <a class="category-item" href="#">Виртуальная реальность</a>
         </li>
         <li>
-          <a href="#">Моноподы для селфи</a>
+          <a class="category-item" href="#">Моноподы для селфи</a>
         </li>
         <li>
-          <a href="#">Экшн-камеры</a>
+          <a class="category-item" href="#">Экшн-камеры</a>
         </li>
         <li>
-          <a href="#">Фитнес-браслеты</a>
+          <a class="category-item" href="#">Фитнес-браслеты</a>
         </li>
         <li>
-          <a href="#">Умные часы</a>
+          <a class="category-item" href="#">Умные часы</a>
         </li>
         <li>
-          <a href="#">Квадрокоптер</a>
+          <a class="category-item" href="#">Квадрокоптер</a>
         </li>
       </ul>
     </section>
 
-    <section>
+    <section class="service">
       <h2>Сервис</h2>
       <div>
-        <button type="button">доставка</button>
-        <button type="button">гарантия</button>
-        <button type="button">кредит</button>
+        <button class="button service-button" type="button">доставка</button>
+        <button class="button service-button" type="button">гарантия</button>
+        <button class="button service-button" type="button">кредит</button>
       </div>
 
       <div>
         <ul>
           <li>
-            <p>Доставка</p>
-            <p>Мы с удовольствием доставим ваш товар прямо к вашему <br>
+            <p class="service-head">Доставка</p>
+            <p class="service-info">Мы с удовольствием доставим ваш товар прямо к вашему <br>
               подъезду совершенно бесплатно! Ведь мы неплохо <br>
               заработаем, поднимая его на ваш этаж.</p>
           </li>
           <li>
-            <p>Гарантия</p>
-            <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — <br>
+            <p class="service-head">Гарантия</p>
+            <p class="service-info">Если из-за возгорания купленного у нас товара у вас сгорит дом — <br>
               не переживайте, мы выдадим вам новый. <br>
               Товар, не дом, конечно же.<br>
           </li>
           <li>
-            <p>Кредит</p>
-            <p>Залезть в долговую яму стало проще! Кредитные консультанты <br>
+            <p class="service-head">Кредит</p>
+            <p class="service-info">Залезть в долговую яму стало проще! Кредитные консультанты <br>
               подберут для вас наиболее выгодные <br>
               условия кредита. Выгодные для нашего банка, разумеется.
           </li>
@@ -195,7 +202,7 @@
 
     <section>
       <h2>Бренды</h2>
-      <ul>
+      <ul class="brands">
         <li>
           <a href="#">
             <img src="img/logo/logo-1dji.png" width="260" height="100" alt="Логотип DJI">
@@ -219,52 +226,52 @@
       </ul>
     </section>
 
-    <section>
-      <h2>О нас</h2>
-      <p>Огромный выбор гаджетов не оставит равнодушным гика, <br>
+    <section class="about-us">
+      <h2 class="about-us-head">О нас</h2>
+      <p class="about-us-info">Огромный выбор гаджетов не оставит равнодушным гика, <br>
         который есть в каждом из нас.</p>
-      <p>Мы можем доставить ваш товар в самые отдаленные точки <br>
+      <p class="about-us-info">Мы можем доставить ваш товар в самые отдаленные точки <br>
         России! DEVICE работает со многими транспортными компаниями:</p>
-      <ul>
+      <ul class="transport-company">
         <li>Деловые линии</li>
         <li>Автотрейдинг</li>
         <li>ЖелДорЭкспедиция</li>
       </ul>
-      <button type="button">подробнее о нас</button>
+      <button class="button about-us-button" type="button">подробнее о нас</button>
     </section>
 
-    <section>
-      <h2>Контакты</h2>
-      <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете <br>
+    <section class="contacts">
+      <h2 class="contacts-head">Контакты</h2>
+      <p class="contacts-info">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете <br>
         проверить работоспособность покупки. Всякое бывает.</p>
       <img src="img/map1.png" width="560" height="222" alt="Карта, г. Москва, ул. Строителей, 15">
-      <button type="button">Напишите нам</button>
+      <button class="button contacts-button" type="button">Напишите нам</button>
     </section>
 
   </main>
 
-  <footer>
+  <footer class="main-footer">
     <a>
       <img src="img/logo/logo.svg" width="163" height="35" alt="Логотип «DEVICE»">
     </a>
 
-    <ul>
+    <ul class="footer-site-navigation">
       <li>
-        <a href="#">Войти</a>
+        <a class="login-link" href="#">Войти</a>
       </li>
       <li>
-        <a href="#">Сравнить</a>
+        <a class="compare-link" href="#">Сравнить</a>
       </li>
       <li>
-        <a href="#">Корзина</a>
+        <a class="cart-link" href="#">Корзина</a>
       </li>
     </ul>
 
-    <p>
+    <p class="footer-adress">
       г. Москва, ул. Строителей, 15
     </p>
 
-    <section>
+    <section class="footer-menu">
       <h2>Меню сайта</h2>
       <ul>
         <li>
@@ -280,53 +287,54 @@
     </section>
 
     <p>
-      <a href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
+      <a class="contacts-phone" href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
     </p>
 
-    <section>
+    <section class="footer-social">
       <h2>Мы в социальных сетях</h2>
       <ul>
         <li>
-          <a href="#">Facebook</a>
+          <a class="social-button" href="#">Facebook</a>
           <img src="img/socials-facebook.svg" width="32" height="32" alt="Логотип Facebook">
         </li>
         <li>
-          <a href="#">Instagram</a>
+          <a class="social-button" href="#">Instagram</a>
           <img src="img/socials-instagram.svg" width="32" height="32" alt="Логотип Instagram">
         </li>
         <li>
-          <a href="#">Twitter</a>
+          <a class="social-button" href="#">Twitter</a>
           <img src="img/socials-twitter.svg" width="32" height="32" alt="Логотип Twitter">
         </li>
       </ul>
     </section>
 
-    <a href="https://htmlacademy.ru/intensive/htmlcss">
+    <a class="footer-copywrite" href="https://htmlacademy.ru/intensive/htmlcss">
       <img src="img/logo/logo-academ.svg" width="27" height="34" alt="Логотип «HTML Academy»">
     </a>
 
   </footer>
 
-  <section>
+  <section class="modal modal-feedback">
     <h2>Напишите нам</h2>
-    <form action="https://echo.htmlacademy.ru" method="post">
+    <form action=" https://echo.htmlacademy.ru" method="post">
       <p>
-        <label for="name-surname">Ваше имя:</label>
+        <label class="modal-description" for="name-surname">Ваше имя:</label>
         <input type="text" id="name-surname" name="name" placeholder="Имя Фамилия">
       </p>
       <p>
-        <label for="e-mail">Ваш e-mail:</label>
+        <label class="modal-description" for="e-mail">Ваш e-mail:</label>
         <input type="email" id="e-mail" name="your-email" placeholder="email@example.com">
       </p>
       <p>
-        <label for="textarea">Текст письма:</label>
+        <label class="modal-description" for="textarea">Текст письма:</label>
         <input type="text" id="textarea" name="letter" placeholder="В свободной форме">
       </p>
-      <button type="submit">отправить</button>
+      <button class="button" type="submit">отправить</button>
     </form>
+    <button class="modal-close" type="button">Закрыть</button>
   </section>
 
-  <!-- Здесь будет карта 
+  <!-- Здесь будет карта
 		<section>
 		<h2>Как до нас добраться</h2>
 		</section>
